err/bcbio-nextgen.err
Listing '.'...
Listing './bin'...
Compiling './bin/bcbio_fastq_umi_prep.py'...
***   File "./bin/bcbio_fastq_umi_prep.py", line 79
    print("Adding UMIs from", umi_fq, "to read headers in", " ".join([x for x in read1_fq, read2_fq if x]))
                                                                                         ^
SyntaxError: invalid syntax

Compiling './bin/bcbio_nextgen.py'...
***   File "./bin/bcbio_nextgen.py", line 202
    print version.__version__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/bcbio_prepare_samples.py'...
Compiling './bin/bcbio_setup_genome.py'...
***   File "./bin/bcbio_setup_genome.py", line 189
    print append_fa_cmd.format(**locals())
                      ^
SyntaxError: invalid syntax

Compiling './bin/cwltool2wdl.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bcbio'...
Listing './lib/python3.5/site-packages/bcbio/bam'...
Listing './lib/python3.5/site-packages/bcbio/bed'...
Listing './lib/python3.5/site-packages/bcbio/broad'...
Listing './lib/python3.5/site-packages/bcbio/chipseq'...
Listing './lib/python3.5/site-packages/bcbio/cwl'...
Listing './lib/python3.5/site-packages/bcbio/data'...
Listing './lib/python3.5/site-packages/bcbio/data/umis'...
Listing './lib/python3.5/site-packages/bcbio/distributed'...
Listing './lib/python3.5/site-packages/bcbio/galaxy'...
Listing './lib/python3.5/site-packages/bcbio/graph'...
Listing './lib/python3.5/site-packages/bcbio/heterogeneity'...
Listing './lib/python3.5/site-packages/bcbio/hla'...
Listing './lib/python3.5/site-packages/bcbio/hmmer'...
Listing './lib/python3.5/site-packages/bcbio/illumina'...
Listing './lib/python3.5/site-packages/bcbio/log'...
Listing './lib/python3.5/site-packages/bcbio/ngsalign'...
Listing './lib/python3.5/site-packages/bcbio/picard'...
Listing './lib/python3.5/site-packages/bcbio/pipeline'...
Listing './lib/python3.5/site-packages/bcbio/pipeline/disambiguate'...
Compiling './lib/python3.5/site-packages/bcbio/pipeline/sra.py'...
***   File "./lib/python3.5/site-packages/bcbio/pipeline/sra.py", line 44
    print gsm_info
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bcbio/provenance'...
Listing './lib/python3.5/site-packages/bcbio/qc'...
Listing './lib/python3.5/site-packages/bcbio/rnaseq'...
Listing './lib/python3.5/site-packages/bcbio/server'...
Listing './lib/python3.5/site-packages/bcbio/srna'...
Listing './lib/python3.5/site-packages/bcbio/structural'...
Compiling './lib/python3.5/site-packages/bcbio/structural/regions.py'...
***   File "./lib/python3.5/site-packages/bcbio/structural/regions.py", line 92
    def scale_in_boundary(raw, round_interval, (min_val, max_val)):
                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bcbio/upload'...
Listing './lib/python3.5/site-packages/bcbio/variation'...
Listing './lib/python3.5/site-packages/bcbio/workflow'...
Listing './lib/python3.5/site-packages/bcbio_nextgen-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/integration'...
Listing './lib/python3.5/site-packages/tests/integration/rnaseq'...
Compiling './lib/python3.5/site-packages/tests/integration/test_pipeline.py'...
***   File "./lib/python3.5/site-packages/tests/integration/test_pipeline.py", line 26
    print programs._get_versions(config)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/unit'...
Listing './lib/python3.5/site-packages/tests/unit/distributed'...
Listing './lib/python3.5/site-packages/tests/unit/ngsalign'...
Listing './lib/python3.5/site-packages/tests/unit/pipeline'...
Listing './lib/python3.5/site-packages/tests/unit/rnaseq'...
Listing './lib/python3.5/site-packages/tests/unit/upload'...
Listing './share'...
Listing './share/python-wheels'...
